syntax = "proto3";

package git.micro.com.changz.product;

service Product {
	// 添加商品
	rpc AddProduct(ProductInfo) returns (ProductResponse) {}
	// 根据ID查找商品
	rpc FindProductById(RequestProductId) returns(ProductInfo) {}
	// 修改商品
	rpc UpdateProduct(ProductInfo) returns (Response) {}
	// 根据ID删除商品
	rpc DeleteProductById(RequestProductId) returns(Response) {}

	// 获取所有商品
	rpc FindAllProduct(RequestProductAll) returns(ResponseProductAll) {}

}

message ProductInfo {
	int64 id = 1; // 商品id
	string product_name = 2; // 商品名称
	string product_sku = 3;// 商品标识
	double product_price = 4; // 商品价格
	string product_description = 5; // 商品描述
	int64 product_category_id = 6;
	repeated ProductImage product_image = 7; // 商品照片
	repeated ProductSize product_size = 8; // 商品(尺寸、类型、型号)
	ProductSeo product_seo = 9; // seo信息（搜素引擎检索优化）

}

message ProductImage {
	int64 id = 1; // 图片id
	string image_name = 2; // 图片名称
	string image_code = 3; // 图片标识
	string image_url = 4; // 图片url
//	int64 image_product_id = 5; // 商品图片id
}

message ProductSize {
	int64 id = 1; // id
	string size_name = 2; // 名称
	string size_code = 3; // 标识
//	string size_product_id = 4; // 商品类型id

}

message ProductSeo {
	int64 id = 1; // id
	string seo_tittle = 2; // 标题
	string seo_keywords = 3; // 关键字
	string seo_description = 4; // 描述
	string seo_code = 5; // 标识
}

message ProductResponse{
	int64 product_id = 1; //  商品id
}

message RequestProductId {
	int64 product_id = 1; //  商品id
}

message Response {
	string msg = 1;
}

message RequestProductAll {

}

message ResponseProductAll {
	repeated ProductInfo product_info = 1;
}